--- a/01. Udemy-Clone/index.html
+++ b/01. Udemy-Clone/index.html
@@ -38,6 +38,16 @@
             <i class="fa-solid fa-user" style="color: #000000;"></i>
         </div>
     </div>
+
+    <!--Categories-->
+    <div class="categories">
+        <p>Development</p>
+        <p>Business</p>
+        <p>IT & Software</p>
+        <p>Personal Development</p>
+        <p>Design</p>
+        <p>Marketing</p>
+    </div>
 </body>
 
 </html>
