--- a/01. Udemy-Clone/index.html
+++ b/01. Udemy-Clone/index.html
@@ -48,6 +48,50 @@
         <p>Design</p>
         <p>Marketing</p>
     </div>
+
+    <!--Sale Image-->
+    <div class="sale-image">
+        <img src="./images/sale-image.jpg" alt="Sale Image">
+    </div>
+
+    <!--Recommanded-->
+    <div class="recommended">
+        <h1 class="recommended__title">Reccomended For You</h1>
+        <p>Pick the best fit</p>
+        <div class="recommended__container">
+            <div class="course_card">
+                <img src="./images/c1.jpg">
+                <h3>2023 Python Data Visualization</h3>
+                <p>Col Steele</p>
+                <p>4.7 ⭐⭐⭐⭐</p>
+                <p>Rs 1999 <del>3999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c2.jpg">
+                <h3>Introduction to Programming</h3>
+                <p>V.A.M.R Sinthujan</p>
+                <p>4.9 ⭐⭐⭐⭐⭐</p>
+                <p>Rs 999 <del>1999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c3.jpg">
+                <h3>OOP</h3>
+                <p>ThiruKumaran</p>
+                <p>4.9 ⭐⭐⭐⭐⭐</p>
+                <p>Rs 2999 <del>4999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c4.jpg">
+                <h3>SQL</h3>
+                <p>Vyzhali</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p>Rs 1999 <del>3999</del></p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
