--- a/01. Udemy-Clone/index.html
+++ b/01. Udemy-Clone/index.html
@@ -92,6 +92,121 @@
             </div>
         </div>
     </div>
+
+    <!--Topics-->
+    <div class="topics">
+        <h1>Topics recommended for you</h1>
+
+        <div class="topics__container">
+            <p>Website</p>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JAVA</p>
+            <p>SQL</p>
+            <p>MongoDB</p>
+            <p>C++</p>
+            <p>Python</p>
+            <p>GitHub</p>
+        </div>
+    </div>
+
+    <!--Popular Section-->
+    <div class="popular">
+        <h1>Most Popular</h1>
+        <div class="popular__container">
+            <div class="course_card">
+                <img src="./images/c1.jpg">
+                <h3>2023 Python Data Visualization</h3>
+                <p>Col Steele</p>
+                <p>4.7 ⭐⭐⭐⭐</p>
+                <p>Rs 1999 <del>3999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c2.jpg">
+                <h3>Introduction to Programming</h3>
+                <p>V.A.M.R Sinthujan</p>
+                <p>4.9 ⭐⭐⭐⭐⭐</p>
+                <p>Rs 999 <del>1999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c3.jpg">
+                <h3>OOP</h3>
+                <p>ThiruKumaran</p>
+                <p>4.9 ⭐⭐⭐⭐⭐</p>
+                <p>Rs 2999 <del>4999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c4.jpg">
+                <h3>SQL</h3>
+                <p>Vyzhali</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p>Rs 1999 <del>3999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c1.jpg">
+                <h3>2023 Python Data Visualization</h3>
+                <p>Col Steele</p>
+                <p>4.7 ⭐⭐⭐⭐</p>
+                <p>Rs 1999 <del>3999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c2.jpg">
+                <h3>Introduction to Programming</h3>
+                <p>V.A.M.R Sinthujan</p>
+                <p>4.9 ⭐⭐⭐⭐⭐</p>
+                <p>Rs 999 <del>1999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c3.jpg">
+                <h3>OOP</h3>
+                <p>ThiruKumaran</p>
+                <p>4.9 ⭐⭐⭐⭐⭐</p>
+                <p>Rs 2999 <del>4999</del></p>
+            </div>
+
+            <div class="course_card">
+                <img src="./images/c4.jpg">
+                <h3>SQL</h3>
+                <p>Vyzhali</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p>Rs 1999 <del>3999</del></p>
+            </div>
+        </div>
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <div class="footer__one">
+            <div class="footer__one__s1">
+                <p>Udemy Business</p>
+                <p>Tech on Udemy</p>
+                <p>Get the app</p>
+                <p>About Us</p>
+                <p>Contact Us</p>
+            </div>
+
+            <div class="footer__one__s2">
+                <p>Careers</p>
+                <p>Blog</p>
+                <p>Help and Support</p>
+                <p>Affiliate</p>
+                <p>Investors</p>
+            </div>
+        </div>
+
+        <div class="footer__two">
+            <h1>Udemy</h1>
+            <p>&copy;Udemy, Inc</p>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
