--- a/04. Tripadvisor-Clone/index.html
+++ b/04. Tripadvisor-Clone/index.html
@@ -62,5 +62,22 @@
 
         <button>Search</button>
     </div>
+
+    <div class="center-img">
+        <img src="./images/00.jpg" width="100%" height="500px">
+        
+        <diV class="center-img__description">
+            <h1>Cheers to your <br> Achievements</h1>
+            <p>We went, we reviewed, we reached
+                 milestones. See the big things we did together in 2024.</p>
+
+            <button>Check it out</button>
+        </diV>
+    </div>
+
+    <div class="container-1">
+        <h2>Treat yourself to an award-winning meal</h2>
+        <p>2024's Travelers' Choice Awards Best of the Best Restaurants</p>
+    </div>
 </body>
 </html>
