--- a/04. Tripadvisor-Clone/index.html
+++ b/04. Tripadvisor-Clone/index.html
@@ -78,6 +78,33 @@
     <div class="container-1">
         <h2>Treat yourself to an award-winning meal</h2>
         <p>2024's Travelers' Choice Awards Best of the Best Restaurants</p>
+
+        <div class="container-1-image">
+            <div class="container-1-section">
+                <img src="./images/1.jpg" width="300px">
+                <p>Fine Dining</p>
+            </div>
+
+            <div class="container-1-section">
+                <img src="./images/2.jpg" width="300px">
+                <p>Date Night</p>
+            </div>
+
+            <div class="container-1-section">
+                <img src="./images/3.jpg" width="300px">
+                <p>Casual Dining</p>
+            </div>
+
+            <div class="container-1-section">
+                <img src="./images/4.jpg" width="300px">
+                <p>Hidden Gems</p>
+            </div>
+
+            <div class="container-1-section">
+                <img src="./images/5.jpg" width="300px">
+                <p>Vegan & Vegetarian</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
