--- a/04. Tripadvisor-Clone/index.html
+++ b/04. Tripadvisor-Clone/index.html
@@ -106,5 +106,14 @@
             </div>
         </div>
     </div>
+
+    <div class="container-2">
+        <h2>Get inspired by our fave travel creators</h2>
+        <p>Tried-and-true guidance to fuel your next big trip</p>
+
+        <div class="container-2-image">
+
+        </div>
+    </div>
 </body>
 </html>
