--- a/05. Greenden/index.html
+++ b/05. Greenden/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--Navbar -->
-    <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0">
+    <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl uppercase">Greenden</h1>
 
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 h-8 md:hidden">
@@ -78,6 +78,38 @@
                   
                 <h2 class="text-xl font-medium">24/7 Support</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil sequi, mollitia quas nisi vitae dolores! Dolorum temporibus quae exercitationem laboriosam suscipit veritatis velit minus quam eum quos, maxime ut sunt?</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Best Seller -->
+
+    <section class="p-4 text-center">
+        <h1 class="font-bold mt-5 text-3xl">Best Seller</h1>
+
+        <div class="grid grid-cols-2 mt-5 gap-5  md:grid-cols-4">
+            <div>
+                <img src="./images/Bestseller_1.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
+                <h1>Rose Plant</h1>
+                <p>$20</p>
+            </div>
+
+            <div>
+                <img src="./images/Bestseller_2.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
+                <h1>Lily Plant</h1>
+                <p>$15</p>
+            </div>
+
+            <div>
+                <img src="./images/Bestseller_3.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
+                <h1>Jasmine Plant</h1>
+                <p>$25</p>
+            </div>
+
+            <div>
+                <img src="./images/Bestseller_4.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
+                <h1>Rose Plant</h1>
+                <p>$30</p>
             </div>
         </div>
     </section>
