--- a/05. Greenden/index.html
+++ b/05. Greenden/index.html
@@ -28,10 +28,10 @@
     </nav>
 
     <!-- Header -->
-    <section class="bg-green-100 p-4 flex justify-center">
+    <section class="bg-green-100 p-4 md:p-10 flex justify-center">
         <div>
             <p class="mb-4">We offer you a wide range of Artificial and Natural Flowers</p>
-            <h2 class="font-bold text-3xl mb-5">Plants for your Interior</h2>
+            <h2 class="font-bold text-3xl md:text-5xl mb-5">Plants for your Interior</h2>
 
             <div>
                 <button class="bg-black rounded p-2 text-white">Shop Now</button>
@@ -113,6 +113,49 @@
             </div>
         </div>
     </section>
+
+    <!-- Customer Reviews -->
+
+    <section>
+        <h1 class="text-3xl font-bold mt-5 text-center">Customer Reviews</h1>
+
+        <div class="flex flex-col gap-5 justify-center text-white m-5">
+            <div class="bg-green-900 p-5 container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis totam quas, repellat facilis voluptatibus assumenda distinctio id quia necessitatibus ullam, suscipit est illo! Molestiae recusandae repudiandae quasi aspernatur temporibus similique!</p>
+                <p class="font-bold text-yellow-300">Genny Mathew</p>
+            </div>
+
+            <div class="bg-green-900 p-5 container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis totam quas, repellat facilis voluptatibus assumenda distinctio id quia necessitatibus ullam, suscipit est illo! Molestiae recusandae repudiandae quasi aspernatur temporibus similique!</p>
+                <p class="font-bold text-yellow-300">Jim</p>
+            </div>
+
+            <div class="bg-green-900 p-5 container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis totam quas, repellat facilis voluptatibus assumenda distinctio id quia necessitatibus ullam, suscipit est illo! Molestiae recusandae repudiandae quasi aspernatur temporibus similique!</p>
+                <p class="font-bold text-yellow-300">Tony</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!--NewsLetter-->
+
+    <section class="text-center">
+        <h1 class="text-3xl font-bold mt-5 text-center">Join our News Letter</h1>
+        <p>Signup for our email newspapper to get exclusive discounts, updates and more</p>
+
+        <input type="text" class="border border-black p-2 m-3" style="width: 80%;">
+        <br>
+        <button class="bg-black text-white p-3 m-1 underline">Subscribe</button>
+    </section>
+
+
+    <!-- Footer -->
+     <section class="bg-green-100 p-10 flex flex-col gap-5">
+        <h1 class="text-4xl font-bold">Greenden</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, dolorum.</p>
+        <p>@ 2024 Greenday.com</p>
+     </section>
 
 </body>
 </html>
