--- a/05. Greenden/index.html
+++ b/05. Greenden/index.html
@@ -22,7 +22,7 @@
         
         <ul class="gap-5 text-gray-600 hidden md:flex">
             <li><a href="#" class="hover:underline hover:text-black">Home</a></li>
-            <li><a href="#" class="hover:underline hover:text-black">Products</a></li>
+            <li><a href="./product.html" class="hover:underline hover:text-black">Products</a></li>
             <li><a href="#" class="hover:underline hover:text-black">Contact</a></li>
         </ul>
     </nav>
@@ -151,7 +151,7 @@
 
 
     <!-- Footer -->
-     <section class="bg-green-100 p-10 flex flex-col gap-5">
+     <section class="bg-green-100 p-10 mt-5 flex flex-col gap-5">
         <h1 class="text-4xl font-bold">Greenden</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, dolorum.</p>
         <p>@ 2024 Greenday.com</p>
