--- a/07. Number-Guessing-Game/index.html
+++ b/07. Number-Guessing-Game/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Guessing Game</title>
+
 </head>
 <body>
+
+    <h1>Guess the Number from 1 to 5</h1>
+
+    <input id="inputNum" type="number" min="1" max="5">
+    <button id="btn" onclick="guessingGame()">Check</button>
     
+    <p id="wrong" style="display: none;">You are wrong!</p>
+
+    <p id="guess">Available Guesses: 3</p>
 
     <script src="./script.js"></script>
 </body>
