--- a/05. Greenden/index.html
+++ b/05. Greenden/index.html
@@ -15,7 +15,7 @@
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl uppercase">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 h-8 md:hidden">
+        <svg id="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 h-8 md:hidden cursor-pointer">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
           
@@ -26,6 +26,19 @@
             <li><a href="./contact.html" class="hover:underline hover:text-black">Contact</a></li>
         </ul>
     </nav>
+
+    <!--Side Navbar-->
+
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 right-0 transition-all duration-1000"  style="width: 50%;height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="close-nav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col items-center gap-10 text-gray-600 md:flex">
+            <li><a href="#" class="hover:underline hover:text-black">Home</a></li>
+            <li><a href="./product.html" class="hover:underline hover:text-black">Products</a></li>
+            <li><a href="./contact.html" class="hover:underline hover:text-black">Contact</a></li>
+        </ul>
+    </section>
 
     <!-- Header -->
     <section class="bg-green-100 p-4 md:p-10 flex justify-center">
@@ -156,6 +169,10 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, dolorum.</p>
         <p>@ 2024 Greenday.com</p>
      </section>
+
+
+
+     <script src="./script.js"></script>
 
 </body>
 </html>
