--- a/05. Greenden/product.html
+++ b/05. Greenden/product.html
@@ -42,130 +42,130 @@
 
         <!--Our Products-->
 
-        <section class="text-center">
-            <h1 class="text-center mt-8 text-2xl font-bold">Our Products</h1>
+        <section class="p-4 text-center">
+            <h1 class="text-center mt-8 text-3xl font-bold">Our Products</h1>
 
-            <input type="text" class="border border-black p-2 m-5" style="width: 80%;" placeholder="Search for a product...">
+            <input id="search" type="text" class="border border-black p-2 m-5" style="width: 80%;" placeholder="Search for a product...">
 
-            <div class="grid grid-cols-2 m-5 gap-5 md:grid-cols-4">
+            <div id="product-container" class="grid grid-cols-2 m-5 gap-5 md:grid-cols-4">
                 <div>
                     <img src="./images/Product_1.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
                     <p>Rose Plant</p>
-                    <p>$20</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_2.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Lily Plant</p>
+                    <span>$10</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_3.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Aconite Plant</p>
+                    <span>$25</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_4.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Pansies Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_5.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Marigolds Plant</p>
+                    <span>$30</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_6.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Snapdragon Plant</p>
+                    <span>$10</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_7.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Sunflower Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_8.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Begonia Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_9.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>African Daisy Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_10.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Petunia Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_11.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Winter Viola Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_12.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Daylily Plant</p>
+                    <span>$30</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_13.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Chrysanthemum Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_14.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Peony Plant</p>
+                    <span>$10</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_15.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Lavender Plant</p>
+                    <span>$20</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_16.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Lilac bush Plant</p>
+                    <span>$30</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_17.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Hibiscus Plant</p>
+                    <span>$40</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_18.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Cherry blossom Plant</p>
+                    <span>$29</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_19.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Plum Plant</p>
+                    <span>$32</span>
                 </div>
 
                 <div>
                     <img src="./images/Product_20.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2">
-                    <p>Rose Plant</p>
-                    <p>$20</p>
+                    <p>Jasmine Plant</p>
+                    <span>$30</span>
                 </div>
             </div>
         </section>
@@ -178,7 +178,7 @@
         <p>@ 2024 Greenday.com</p>
      </section>
 
-     <script src="./script.js"></script>
+     <script src="./product.js"></script>
 
 </body>
 </html>
